Fix modal position on safari

--- a/components/Modal/Modal.module.scss
+++ b/components/Modal/Modal.module.scss
@@ -14,6 +14,7 @@
   display: grid;
   place-items: center;
   opacity: 0;
+  height: 100%;
 }
 
 .popupInner {
